properly handle global memory/capacity restrictions